chore: update setup and stop commands

--- a/airflow/Makefile
+++ b/airflow/Makefile
@@ -1,10 +1,10 @@
 init:
 # Initialize the database
-	docker-compose up airflow-init
+	docker-compose up airflow-init -d
 
 start:
 # Start up all services
-	docker-compose up
+	docker-compose up -d
 
 stop:
 	docker-compose stop
