feat: move ingester to airflow dags

--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -50,8 +50,13 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.2}
-  # build: .
+  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.2}
+  build:
+    context: .
+    dockerfile: Dockerfile
+  env_file: 
+    - ingester/env
+    
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -62,7 +67,7 @@ x-airflow-common:
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     # yamllint disable rule:line-length
     # Use simple http server on scheduler for health checks
@@ -77,6 +82,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - /var/run/docker.sock:/var/run/docker.sock
+    - ./../data/:/opt/airflow/dags/data/
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -84,8 +91,7 @@ x-airflow-common:
       condition: service_healthy
     postgres:
       condition: service_healthy
-  networks:
-      - custom-network
+
 
 services:
   postgres:
@@ -102,8 +108,6 @@ services:
       retries: 5
       start_period: 5s
     restart: always
-    networks:
-      - custom-network
 
   redis:
     image: redis:latest
@@ -116,8 +120,6 @@ services:
       retries: 50
       start_period: 30s
     restart: always
-    networks:
-      - custom-network
 
   airflow-webserver:
     <<: *airflow-common
@@ -135,8 +137,6 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-    networks:
-      - custom-network
 
   airflow-scheduler:
     <<: *airflow-common
@@ -152,8 +152,6 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-    networks:
-      - custom-network
 
   airflow-worker:
     <<: *airflow-common
@@ -177,8 +175,6 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-    networks:
-      - custom-network
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
@@ -193,8 +189,6 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-    networks:
-      - custom-network
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
@@ -307,11 +301,9 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-    networks:
-      - custom-network
 volumes:
   postgres-db-volume:
 
-networks:
-  custom-network:
-    external: true
+# networks:
+#   custom-network:
+#     external: true
