chore: update environment file name

--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -55,7 +55,7 @@ x-airflow-common:
     context: .
     dockerfile: Dockerfile
   env_file: 
-    - ingester/env
+    - .env
     
   environment:
     &airflow-common-env
