--- a/airflow/Makefile
+++ b/airflow/Makefile
@@ -1,10 +1,10 @@
 init:
 # Initialize the database
-	docker-compose up airflow-init -d
+	sudo docker-compose up airflow-init -d
 
 start:
 # Start up all services
-	docker-compose up -d
+	sudo docker-compose up -d
 
 stop:
-	docker-compose stop
+	docker-compose down
