--- a/redash/Makefile
+++ b/redash/Makefile
@@ -1,8 +1,8 @@
-setup:
+init:
 	docker-compose run --rm server create_db
 
 start:
-	docker-compose up -d
+	sudo docker-compose up -d
 
 stop:
-	docker-compose stop
+	docker-compose down
